--- a/Beacon/Blazor/Components/Songs/SongList.razor
+++ b/Beacon/Blazor/Components/Songs/SongList.razor
@@ -1,6 +1,6 @@
 ﻿@inject IJSRuntime jSRuntime
 
-<div tabindex="0" id="SongList" class="h-full w-full overflow-auto" @onkeydown="Navigate">
+<div tabindex="0" id="SongList" class="h-full w-full overflow-auto transition-all" @onkeydown="Navigate">
 
 	<Virtualize Items="Songs" Context="Song" ItemSize="64">
 		@{
@@ -31,21 +31,20 @@
 					</span>
 				</div>
 
-				<div class="flex space-x-5 ">
-					<div class="@(isSelected ? "flex" : "hidden group-hover:flex")">
-						@if (Song.InQueue)
-						{
-							<button class="font-ark hover:opacity-50" @onclick="(() => RemoveFromQueueClick(Song))" @onclick:stopPropagation="true">
-								R
-							</button>
-						}
-						else
-						{
-							<button class="font-ark hover:opacity-50" @onclick="(() => AddToQueueClick(Song))" @onclick:stopPropagation="true">
-								A
-							</button>
-						}
-					</div>
+				<div class="flex space-x-5">
+				
+					@if (Song.InQueue)
+					{
+						<button class="font-ark hover:opacity-50" @onclick="(() => RemoveFromQueueClick(Song))" @onclick:stopPropagation="true">
+							R
+						</button>
+					}
+					else
+					{
+						<button class="font-ark hover:opacity-50 @(isSelected ? "flex" : "hidden group-hover:flex")" @onclick="(() => AddToQueueClick(Song))" @onclick:stopPropagation="true">
+							A
+						</button>
+					}
 
 					<button class="font-ark hover:opacity-50 @(IsQueueMode ? "invisible" : isSelected ? "flex" : "invisible group-hover:visible")" @onclick="(() => DeleteSongClick(Song))" @onclick:stopPropagation="true">D</button>
 				</div>
@@ -82,6 +81,8 @@
 	private DateTime lastKeyDownTime = DateTime.MinValue;
 	private async Task Navigate(KeyboardEventArgs e)
 	{
+		if (Songs.Count <= 0) return;
+
 		DateTime currentTime = DateTime.Now;
 		int timeElapsed = (currentTime - lastKeyDownTime).Milliseconds;
 		if (timeElapsed <= 150) return;
