--- a/Beacon/wwwroot/css/output.css
+++ b/Beacon/wwwroot/css/output.css
@@ -1004,6 +1004,16 @@ select {
   border-color: rgb(37 37 39 / var(--tw-border-opacity));
 }
 
+.border-accented {
+  --tw-border-opacity: 1;
+  border-color: rgb(24 24 31 / var(--tw-border-opacity));
+}
+
+.border-accented:is(.dark *) {
+  --tw-border-opacity: 1;
+  border-color: rgb(245 243 245 / var(--tw-border-opacity));
+}
+
 .bg-red {
   --tw-bg-opacity: 1;
   background-color: rgb(232 94 94 / var(--tw-bg-opacity));
@@ -1187,10 +1197,6 @@ select {
   height: 1.25rem;
 }
 
-.h-1\/2 {
-  height: 50%;
-}
-
 .h-10 {
   height: 2.5rem;
 }
@@ -1263,6 +1269,11 @@ select {
 
 .flex-none {
   flex: none;
+}
+
+.-translate-y-24 {
+  --tw-translate-y: -6rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer {
@@ -1441,6 +1452,10 @@ select {
 
 .border-r-2 {
   border-right-width: 2px;
+}
+
+.border-dashed {
+  border-style: dashed;
 }
 
 .border-gray-200 {
@@ -1699,6 +1714,10 @@ select {
   color: rgb(24 24 31 / var(--tw-text-opacity));
 }
 
+.text-transparent {
+  color: transparent;
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1731,6 +1750,14 @@ select {
   --tw-placeholder-opacity: 0.5;
 }
 
+.opacity-0 {
+  opacity: 0;
+}
+
+.opacity-15 {
+  opacity: 0.15;
+}
+
 .opacity-25 {
   opacity: 0.25;
 }
@@ -1756,6 +1783,16 @@ select {
 
 .ring-opacity-50 {
   --tw-ring-opacity: 0.5;
+}
+
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-200 {
+  transition-duration: 200ms;
 }
 
 @font-face {
