--- a/Beacon/wwwroot/css/output.css
+++ b/Beacon/wwwroot/css/output.css
@@ -1054,6 +1054,10 @@ select {
   background-color: rgb(35 93 218 / var(--tw-bg-opacity));
 }
 
+.pointer-events-none {
+  pointer-events: none;
+}
+
 .invisible {
   visibility: hidden;
 }
@@ -1070,12 +1074,20 @@ select {
   left: 0px;
 }
 
+.left-10 {
+  left: 2.5rem;
+}
+
 .left-5 {
   left: 1.25rem;
 }
 
 .top-0 {
   top: 0px;
+}
+
+.top-10 {
+  top: 2.5rem;
 }
 
 .top-3 {
@@ -1160,6 +1172,10 @@ select {
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.mt-px {
+  margin-top: 1px;
 }
 
 .block {
